manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoons-api
  namespace: spoons-api
spec:
  ingressClassName: traefik
  rules:
    - host: spoons-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spoons-api
                port:
                  name: http
